fixed graphs and resizing and took out some teacher stuff - wanted to pull page jump fix

--- a/galapagos_comparison/static_media/css/app.css
+++ b/galapagos_comparison/static_media/css/app.css
@@ -162,6 +162,8 @@ margin-bottom: 1.5em;
 #center{text-align:center;}
 .nest{background-image: url("../images/nest.png"); background-size: contain; padding-right:1%; height:220px; margin:auto; background-repeat: no-repeat;}
 .center{position:absolute; margin-top: -5%; padding-left: 28%;}
+.galapagosMap{background-image: url("../images/galapagosFinal.png"); background-size: contain; padding-right:1%; height:220px; margin:auto; background-repeat: no-repeat;}
+
 
 /*new home styles*/
 
